Small fixes wrapping up GR4

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ html, body {
   margin: 0;
 }
 
-/* line 13, ../scss/elements/_containers.scss */
+/* line 12, ../scss/elements/_containers.scss */
 #app {
   height: 100%;
   max-width: 1024px;
@@ -33,7 +33,7 @@ html, body {
   margin: auto;
   position: relative;
 }
-/* line 19, ../scss/elements/_containers.scss */
+/* line 18, ../scss/elements/_containers.scss */
 #app:after {
   visibility: hidden;
   display: block;
@@ -43,7 +43,7 @@ html, body {
   height: 0;
 }
 
-/* line 29, ../scss/elements/_containers.scss */
+/* line 27, ../scss/elements/_containers.scss */
 #main-wrapper {
   position: absolute;
   width: 100%;
@@ -51,7 +51,7 @@ html, body {
   bottom: 0;
 }
 
-/* line 36, ../scss/elements/_containers.scss */
+/* line 33, ../scss/elements/_containers.scss */
 #content {
   position: relative;
   left: -5px;
@@ -64,7 +64,6 @@ html, body {
   overflow: hidden;
   padding: 1em;
   padding-bottom: 0;
-  border-left: 5px solid #999999;
 }
 
 /* line 3, ../scss/compounds/_visualization.scss */
@@ -156,12 +155,14 @@ header #course-select {
   width: 12em;
   display: block;
   float: left;
+  border-right: 15px solid #10628d;
+  height: 100%;
 }
-/* line 41, ../scss/compounds/_navigation.scss */
+/* line 43, ../scss/compounds/_navigation.scss */
 #visualizations ul {
   list-style: none;
 }
-/* line 45, ../scss/compounds/_navigation.scss */
+/* line 47, ../scss/compounds/_navigation.scss */
 #visualizations li {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -170,48 +171,65 @@ header #course-select {
   -moz-transition: background-color 0.25s ease-in-out, background-image 0.25s ease-in-out, border 0.25s ease;
   -o-transition: background-color 0.25s ease-in-out, background-image 0.25s ease-in-out, border 0.25s ease;
   transition: background-color 0.25s ease-in-out, background-image 0.25s ease-in-out, border 0.25s ease;
-  font-size: 1.05em;
-  border-bottom: 1px solid #cccccc;
-  border-right: 5px solid #999999;
-  padding: 1em;
-  padding-right: 0;
+  font-size: 1.025em;
   text-align: right;
   color: #444444;
 }
-/* line 57, ../scss/compounds/_navigation.scss */
-#visualizations li:hover {
-  background-color: #ac005b;
-  border-right: 15px solid #460025;
-  color: white;
-  border-bottom: 1px solid #ac005b;
-}
-/* line 62, ../scss/compounds/_navigation.scss */
-#visualizations li:hover a {
-  color: white;
-}
-/* line 66, ../scss/compounds/_navigation.scss */
-#visualizations li:last-child {
-  border-bottom: 0px solid #cccccc;
-}
-/* line 69, ../scss/compounds/_navigation.scss */
-#visualizations li.selected {
-  background-color: #ac005b;
-  border-right: 5px solid #460025;
-  color: white;
-  border-bottom: 1px solid #ac005b;
-}
-/* line 74, ../scss/compounds/_navigation.scss */
-#visualizations li.selected a {
-  color: white;
-}
-/* line 78, ../scss/compounds/_navigation.scss */
+/* line 55, ../scss/compounds/_navigation.scss */
 #visualizations li a {
   padding-right: 1em;
   color: #444444;
   display: block;
   width: 100%;
 }
-/* line 86, ../scss/compounds/_navigation.scss */
+/* line 61, ../scss/compounds/_navigation.scss */
+#visualizations li .wrapper {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: background-color 0.25s ease-in-out, border 0.25s ease;
+  -moz-transition: background-color 0.25s ease-in-out, border 0.25s ease;
+  -o-transition: background-color 0.25s ease-in-out, border 0.25s ease;
+  transition: background-color 0.25s ease-in-out, border 0.25s ease;
+  height: 100%;
+  width: 100%;
+  padding: 1em;
+  padding-right: 0;
+  border-bottom: 1px solid #cccccc;
+}
+/* line 71, ../scss/compounds/_navigation.scss */
+#visualizations li:hover {
+  background-color: #1ea1e5;
+  border-right: 10px solid #10628d;
+  color: white;
+}
+/* line 75, ../scss/compounds/_navigation.scss */
+#visualizations li:hover a {
+  color: white;
+}
+/* line 78, ../scss/compounds/_navigation.scss */
+#visualizations li:hover .wrapper {
+  border-bottom: 1px solid #1ea1e5;
+}
+/* line 83, ../scss/compounds/_navigation.scss */
+#visualizations li:last-child .wrapper {
+  border-bottom: 0px solid #cccccc;
+}
+/* line 87, ../scss/compounds/_navigation.scss */
+#visualizations li.selected {
+  background-color: #1ea1e5;
+  border-right: 0px;
+  color: white;
+}
+/* line 91, ../scss/compounds/_navigation.scss */
+#visualizations li.selected a {
+  color: white;
+}
+/* line 94, ../scss/compounds/_navigation.scss */
+#visualizations li.selected .wrapper {
+  border-bottom: 1px solid #1ea1e5;
+}
+/* line 100, ../scss/compounds/_navigation.scss */
 #visualizations li.favorite {
   background-color: lightgray;
 }
