--- a/scss/compounds/_navigation.scss
+++ b/scss/compounds/_navigation.scss
@@ -37,6 +37,8 @@ header{
     width: 12em;
     display: block;
     float: left;
+    border-right: 15px solid $primary-color;
+    height: 100%;
 
     ul{
         list-style: none;
@@ -47,39 +49,51 @@ header{
         @include transition(background-color .25s ease-in-out,
             background-image .25s ease-in-out,
             border .25s ease);
-        font-size: 1.05em;
-        border-bottom: 1px solid lighten($gray,20);
-        border-right: 5px solid $gray;
-        padding: 1em;
-        padding-right: 0;
+        font-size: 1.025em;
         text-align: right;
         color: $black;
-        &:hover{
-            background-color: lighten($red,20);
-            border-right: 15px solid $red;
-            color: white;
-            border-bottom: 1px solid lighten($red,20);
-            a{
-                color: white;
-            }
-        }
-        &:last-child{
-            border-bottom: 0px solid lighten($gray,20);
-        }
-        &.selected{
-            background-color: lighten($red,20);
-            border-right: 5px solid $red;
-            color: white;
-            border-bottom: 1px solid lighten($red,20);
-            a{
-                color: white;
-            }
-        }
         a{
             padding-right: 1em;
             color: $black;
             display: block;
             width: 100%;
+        }
+        .wrapper{
+            @include box-sizing(border-box);
+            @include transition(background-color .25s ease-in-out,
+                border .25s ease);
+            height: 100%;
+            width: 100%;
+            padding: 1em;
+            padding-right: 0;
+            border-bottom: 1px solid lighten($gray,20);
+        }
+        &:hover{
+            background-color: lighten($primary-color,20);
+            border-right: 10px solid $primary-color;
+            color: white;
+            a{
+                color: white;
+            }
+            .wrapper{
+                border-bottom: 1px solid lighten($primary-color,20);
+            }
+        }
+        &:last-child{
+            .wrapper{
+                border-bottom: 0px solid lighten($gray,20); 
+            }
+        }
+        &.selected{
+            background-color: lighten($primary-color,20);
+            border-right: 0px;
+            color: white;
+            a{
+                color: white;
+            }
+            .wrapper{
+                border-bottom: 1px solid lighten($primary-color,20);
+            }
         }
     }
 
