--- a/scss/elements/_containers.scss
+++ b/scss/elements/_containers.scss
@@ -9,7 +9,6 @@ html, body{
     padding: 0;
     margin: 0;
 }
-
 #app{
     height: 100%;
     max-width: 1024px;
@@ -25,14 +24,12 @@ html, body{
         height: 0;
     }
 }
-
 #main-wrapper{
     position: absolute;
     width: 100%;
     top: $header-height;
     bottom: 0; 
 }
-
 #content{
     position:relative;
     left: -5px;
@@ -43,5 +40,4 @@ html, body{
     overflow: hidden;
     padding: 1em;
     padding-bottom: 0;
-    border-left: 5px solid $gray;
 }
